# clashd

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config
.github/workflows/: rust.yml
lib/config/: nuxt.config.js  package-lock.json  package.json  vue.config.js
lib/config/layouts/: default.vue
lib/config/plugins/: element-ui.js
lib/config/src/: App.vue  main.js
lib/config/src/plugins/: element.js
lib/yacd/: babel.config.js  package-lock.json  package.json  webpack.config.js
lib/yacd/src/: index.template.ejs
lib/yacd/src/components/: ErrorBoundary.js  Root.js
lib/yacd/src/ducks/: rules.js
lib/yacd/src/misc/: chart.js
src/: content.rs  main.rs  process.rs  utils.rs
