[package]
name = "clashd"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
exitfailure = "0.5.1"
include-flate = "0.1.3"
lazy_static = "1.4.0"
log = "0.4.8"
serde = "1.0.104"
serde_yaml = "0.8.11"
systray = "0.4.0"

[dependencies.web-view]
version ="0.6.1"
features = ["edge"]

[dependencies.winapi]
version = "0.3.8"
features = ["winbase"]

[build-dependencies]
winres = "0.1.11"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
incremental = false
debug = true